--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./src/app:/usr/src/app
     working_dir: /usr/src/app
-    command: bash -c "npm install && nodemon -L server.js"
+    command: bash -c "npm install && node node_modules/nodemon/bin/nodemon.js -L server.js"
     ports:
       - "33000:3000"
     depends_on:
