--- a/manifest.yml
+++ b/manifest.yml
@@ -7,8 +7,8 @@ applications:
   memory: 256M
   instances: 1
   domain: mybluemix.net
-  name: rethinkdb-rps
-  host: rethinkdb-rps-${random-word}
+  name: nodejs-rps
+  host: nodejs-rps-${random-word}
   disk_quota: 1024M
   services:
   - rethinkdb-rps
