--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
   web:
     image: markwatsonatx/node-alpine:latest    
     volumes:
+      - ./startup:/usr/startup
       - ./src/app:/usr/src/app
     working_dir: /usr/src/app
-    command: bash -c "npm install && node node_modules/nodemon/bin/nodemon.js -L server.js"
+    command: /usr/startup/startup.sh
     ports:
       - "33000:3000"
     depends_on:
